--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: wamf_playground
 description: A playground for showcasing the widgets.
-version: 0.0.1
+version: 0.0.2
 author:
 homepage:
 
@@ -10,6 +10,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  crypto: ^2.1.3
+  url_launcher: ^5.1.4
 
 dev_dependencies:
   flutter_test:
